--- a/dapplist.json
+++ b/dapplist.json
@@ -1,11 +1,11 @@
 [
   {
-    "shortName": "DeHive test ",
+    "shortName": "DeHive",
     "subtitle": "Well-Balanced Crypto Indexes",
     "connectLink": "https://app.dehive.finance/",
     "buttonColor": "#3F3F4B",
     "chainIds": [1, 56, 100, 137],
-    "iconLink": "https://raw.githubusercontent.com/lab10-coop/minerva-dapplist/main/images/stakewise.svg",
+    "iconLink": "https://raw.githubusercontent.com/lab10-coop/minerva-dapplist/main/images/dehive.svg",
     "longName": "DeHive DeFi Protocol",
     "explainerTitle": "Maximise DeFi profits",
     "explainerText": "",
