--- a/dapplist.json
+++ b/dapplist.json
@@ -1,6 +1,6 @@
 [
   {
-    "shortName": "DeHive",
+    "shortName": "DeHive t",
     "subtitle": "Well-Balanced Crypto Indexes",
     "connectLink": "https://app.dehive.finance/",
     "buttonColor": "#3F3F4B",
