--- a/dapplist.json
+++ b/dapplist.json
@@ -5,7 +5,7 @@
     "connectLink": "https://app.dehive.finance/",
     "buttonColor": "#3F3F4B",
     "chainIds": [1, 56, 100, 137],
-    "iconLink": "https://raw.githubusercontent.com/lab10-coop/minerva-dapplist/main/images/dehive.svg",
+    "iconLink": "https://raw.githubusercontent.com/lab10-coop/minerva-dapplist/main/images/",
     "longName": "DeHive DeFi Protocol",
     "explainerTitle": "Maximise DeFi profits",
     "explainerText": "",
@@ -57,7 +57,7 @@
     "connectLink": "https://app.superfluid.finance/dashboard",
     "buttonColor": "#C9C8D3",
     "chainIds": [100, 137],
-    "iconLink": "https://raw.githubusercontent.com/lab10-coop/minerva-dapplist/main/images/superfluid.svg",
+    "iconLink": "https://raw.githubusercontent.com/lab10-coop/minerva-dapplist/main/images/",
     "longName": "Superfluid Dashboard",
     "explainerTitle": "Manage streamable tokens",
     "explainerText": "Handle subscriptions, salaries, rewards and any composable stream of value, with continuous settlement and per-second netting for extreme capital efficiency.",
