--- a/dapplist.json
+++ b/dapplist.json
@@ -19,7 +19,7 @@
     "sponsoredChainId": 1
   },
   {
-    "shortName": "Honeyswap!!",
+    "shortName": "Honeyswap!!!",
     "subtitle": "Decentralized Exchange",
     "connectLink": "https://app.honeyswap.org/",
     "buttonColor": "#FFAA00",
