--- a/dapplist.json
+++ b/dapplist.json
@@ -1,7 +1,7 @@
 [
   {
     "shortName": "Honeyswap super loooooooooong name Honeyswap looooong naaaaame",
-    "subtitle": "Decentralized Exchange",
+    "subtitle": "Decentralized Exchangeloooooooooong name loooooooooong name loooooooooong name",
     "connectLink": "https://app.honeyswap.org/",
     "buttonColor": "#FFAA00",
     "chainIds": [100, 137],
