--- a/dapplist.json
+++ b/dapplist.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.3.15",
+  "version": "0.3.13",
   "dapps": [
     {
-      "shortName": "xDe",
+      "shortName": "xDeeeee",
       "subtitle": "Cross-Chain Transfer",
       "connectLink": "https://xpollinate.io/",
       "buttonColor": "#5C5D6D",
